# FastApi-w-React

./: README.md
task-tracker/: package-lock.json
task-tracker-backend/: docker-compose.yml  pyproject.toml
task-tracker-backend/app/: Dockerfile  main.py
task-tracker-backend/app/assistant/: model_helper.py
task-tracker-backend/app/config/: __init__.py
task-tracker-backend/app/database/: db_connection.py
task-tracker-backend/app/database-seed/: 01-drop.sql  02-seed.sql  generate.sh
task-tracker-backend/app/endpoints/: tasks.py  users.py
task-tracker-backend/app/generators/: db_generator.py
task-tracker-backend/app/model/: Task.py  User.py
